# conan_cmake_cpp_project_tools

./: .gitignore  README.md  pyproject.toml
conan_cmake_cpp_project_tools/: cli.py  config.py  core_utils.py  path_filter_utils.py  script.py  steps.py  utils.py
doc/examples/: generate-output-cmake-only-1.sh  make.sh  output-cmake-only-1.txt
doc/examples/cmake-only/: CMakeLists.txt
doc/examples/conan-and-cmake/: CMakeLists.txt
tests/: test_cli.py  test_commands.py  test_config.py  test_script.py  test_utils.py
tests/examples/Project1/: CMakeLists.txt  conanfile.txt
tests/examples/Project1/src/: libA.cpp  libA.hpp
tests/examples/Project1/testing/: CMakeLists.txt  libA_tests.cpp  main.cpp
